--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
              <!-- 尾巴 -->
              <footer id="footer">
                  <ul class="copyright">
-                     <a href="https://www.learm.cn/">@LeaRM</a>
+                    © 2020 Learm | <a href="http://beian.miit.gov.cn" rel=”external nofollow”>粤ICP备20011806号</a>
                  </ul>
              </footer>
 
